--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.19.0",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.5.0",
     "framer-motion": "^12.24.10",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
