--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "seed:api": "echo Seed işlemi için: 1) Backend çalışıyor olmalı 2) SuperAdmin ile giriş yapın 3) POST /seed endpoint'ini çağırın",
+    "create-admin": "node scripts/test-create-admin.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
