--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,8 @@
-# Google Maps API Key
-# Google Cloud Console'dan aldığınız API key'i buraya yapıştırın
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyDU5EErTjhY6zA2HJQXPCVRmtWcdVs5Nis
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=7NUR4*VM
+DB_DATABASE=local_stories
+NODE_ENV=development
+JWT_SECRET=your-super-secret-jwt-key
+FRONTEND_URL=http://localhost:3001
